// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuarkusDependencyPicker /> renders the QuarkusDependencyPicker correctly 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid pf-m-gutter dependencies-picker"
  >
    <div
      class="pf-l-grid__item pf-m-12-col-on-sm pf-m-6-col-on-md"
    >
      <input
        aria-invalid="false"
        aria-label="Search dependencies"
        class="pf-c-form-control search-depencencies-input"
        placeholder=""
        type="text"
        value=""
      />
      <div
        aria-label="Select dependencies"
        class="dependencyList available-dependencies"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<QuarkusDependencyPicker /> select values and save 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid pf-m-gutter dependencies-picker"
  >
    <div
      class="pf-l-grid__item pf-m-12-col-on-sm pf-m-6-col-on-md"
    >
      <input
        aria-invalid="false"
        aria-label="Search dependencies"
        class="pf-c-form-control search-depencencies-input"
        placeholder=""
        type="text"
        value="Netty"
      />
      <div
        aria-label="Select dependencies"
        class="dependencyList available-dependencies"
      >
        <div
          class="item  dependency-item"
        >
          <div
            class="pf-l-stack"
            style="position: relative;"
          >
            <div
              class="pf-l-stack__item pf-m-fill"
            >
              <h1
                aria-label="Pick io.quarkus:quarkus-netty dependency"
                class="pf-c-title"
              >
                Netty
              </h1>
              <span
                class="category"
              >
                Web
              </span>
            </div>
            <div
              class="pf-l-stack__item"
            >
              Netty is a non-blocking I/O client-server framework. Used by Quarkus as foundation layer.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<QuarkusDependencyPicker /> show results for valid search 1`] = `
<DocumentFragment>
  <div
    class="pf-l-grid pf-m-gutter dependencies-picker"
  >
    <div
      class="pf-l-grid__item pf-m-12-col-on-sm pf-m-6-col-on-md"
    >
      <input
        aria-invalid="false"
        aria-label="Search dependencies"
        class="pf-c-form-control search-depencencies-input"
        placeholder=""
        type="text"
        value="CDI"
      />
      <div
        aria-label="Select dependencies"
        class="dependencyList available-dependencies"
      >
        <div
          class="item  dependency-item"
        >
          <div
            class="pf-l-stack"
            style="position: relative;"
          >
            <div
              class="pf-l-stack__item pf-m-fill"
            >
              <h1
                aria-label="Pick io.quarkus:quarkus-arc dependency"
                class="pf-c-title"
              >
                ArC
              </h1>
              <span
                class="category"
              >
                Core
              </span>
            </div>
            <div
              class="pf-l-stack__item"
            >
              Build time CDI dependency injection
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
